[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "firebase-rtdb-tools"
version = "0.2.1"
description = "Firebase Realtime Database (RTDB) lossless restore toolkit for large backups"
readme = "README.md"
authors = [
    { name = "Berkay Turanci", email = "berkayturanci@gmail.com" }
]
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Database",
    "Topic :: Utilities",
]
dependencies = [
    "firebase-admin>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "build",
    "pre-commit",
]

[project.urls]
Homepage = "https://github.com/berkayturanci/firebase-rtdb-restore"
Repository = "https://github.com/berkayturanci/firebase-rtdb-restore"
Issues = "https://github.com/berkayturanci/firebase-rtdb-restore/issues"
Changelog = "https://github.com/berkayturanci/firebase-rtdb-restore/blob/main/CHANGELOG.md"
Documentation = "https://berkayturanci.github.io/firebase-rtdb-restore/"

[project.scripts]
firebase-rtdb-split = "firebase_rtdb_restore.split_backup:main"
firebase-rtdb-validate = "firebase_rtdb_restore.validate_chunks:main"
firebase-rtdb-upload = "firebase_rtdb_restore.upload_chunks:main"
firebase-rtdb-upload-single = "firebase_rtdb_restore.upload_single_user:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["firebase_rtdb_restore*"]

[tool.ruff]
line-length = 120
target-version = "py38"

# The codebase intentionally uses the os.path API throughout, so the PTH
# (pathlib) rule set is deliberately not enabled.
[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "C4", "RET", "SIM", "ARG"]
ignore = ["E501"]  # Line length handled separately
exclude = [
    ".git",
    "build",
    "dist",
    "venv",
    "__pycache__",
]

[tool.ruff.lint.per-file-ignores]
# Tests inject mock firebase_admin modules into sys.modules before importing
# the package under test, so imports legitimately follow executable statements.
"tests/*" = ["E402"]
